syntax = "proto3";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
}
message GetUserRequest {
  string id = 1;
}
message CreateUserRequest {
  string name = 1;
  string email = 2;
}
message User {
  string id = 1;
  string name = 2;
  string email = 3;
}